<resources>
    <string name="app_name">TrainingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scheduledWorkoutText">Your Scheduled Workout</string>
    <string name="lastTrainingDone">Last training: %1$s</string>
    <string name="buttonEditText">EDIT</string>
    <string name="startWorkoutBtn">START WORKOUT</string>
    <string name="toolbar_workout_routines">Your Workouts </string>
    <string name="content_main_workout_routines">All Workouts</string>
    <string name="deletion_confirmation">Are you sure you want to delete %1$s?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="close">CLOSE</string>
    <string name="textview_adjust_timer">Adjust All Timers</string>
    <string name="textview_set_best">BEST</string>
    <string name="textview_set_set">SET</string>
    <string name="textview_set_kg">KG</string>
    <string name="textview_set_reps">REPS</string>
    <string name="button_add_set">ADD SET</string>
    <string name="toolbar_add_exercise">Add Exercise</string>
    <string name="toolbar_edit_exercise">Edit workout</string>
    <string name="exercise_added">%1$s has been added!</string>
    <string name="undo_string">UNDO</string>
    <string name="preferences_name">Workout Data</string>
    <string name="menuitem_edit_workout">Edit Workout Properties</string>
    <string name="workout_description_hint">Workout Description:</string>
    <string name="rest_timer_minute_hint">min</string>
    <string name="rest_timer_second_hint">sec</string>
    <string name="no_scheduled_workout">No scheduled workout today!</string>
    <string name="choose_muscles">Muscle Group</string>
    <string name="choose_exercise_support">Category</string>
    <string name="exercise_name_hint">Exercise Name:</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_note">Add Note</string>
    <string name="workout_name_hint_txtView">Workout Name:</string>
    <string name="deletion">%1$s has been deleted!</string>
</resources>
