<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/routineCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/startedWExerciseTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/addNoteBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Deadlift(barbell)" />

    <Button
        android:id="@+id/addNoteBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_note"
        app:layout_constraintBottom_toBottomOf="@+id/startedWExerciseTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startedWExerciseTxt" />

    <Button
        android:id="@+id/startedWorkoutAddSetBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button_add_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startedWorkSetTable" />

    <TableLayout
        android:id="@+id/startedWorkSetTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNoteBtn">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="@dimen/set_column_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_set_set"
                android:textAlignment="center"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="90dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="@dimen/set_overview_column_width"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/textview_set_best"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="@dimen/set_overview_column_width"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/textview_set_kg"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/textview_set_reps"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>